fix overflow bug; revise web scroll bar

--- a/index.css
+++ b/index.css
@@ -16,7 +16,7 @@ body{
 
 main{
     position: absolute;
-    width: 99vw;
+    width: 100%;
     color: var(--primary);
 }
 
@@ -63,6 +63,19 @@ canvas{
     position: fixed;
     width: 100vw;
     height: 100vh;
+}
+
+::-webkit-scrollbar{
+    width: 10px;
+}
+/* Track */
+::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 3px grey;
+}
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: var(--primary);
+    border-radius: 10px;
 }
 
 .pill{
@@ -215,6 +228,7 @@ canvas{
 
 #side-nav{
     transition: 0.5s;
+    overflow: auto;
 }
 
 .side-nav-fixed-top{
